--- a/app/src/main/res/layout/activity_news_feed.xml
+++ b/app/src/main/res/layout/activity_news_feed.xml
@@ -4,32 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- The first child in the layout is for the main Activity UI-->
-    <!-- activity_postlist.xml -->
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <!-- Framelayout to display Fragments -->
+    <FrameLayout
+        android:id="@+id/frame_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context=".MainActivity">
-
-        <ListView
-            android:id="@+id/postListView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
-    </RelativeLayout>
+        android:layout_height="match_parent" />
 
 
-    <!-- Side navigation drawer UI -->
+    <!-- Listview to display slider menu -->
     <ListView
         android:id="@+id/navList"
-        android:layout_width="200dp"
+        android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:layout_gravity="left|start"
-        android:background="#ffeeeeee"/>
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="#00ff085e"
+        android:dividerHeight="1dp"
+        android:listSelector="@drawable/list_selector"
+        android:background="#de08a0ff"/>
 
 
 </android.support.v4.widget.DrawerLayout>
