post_item changed.

--- a/app/src/main/res/layout/postitem.xml
+++ b/app/src/main/res/layout/postitem.xml
@@ -1,44 +1,40 @@
 <!-- postitem.xml -->
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relativelayout"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-    >
+    android:layout_height="fill_parent" >
 
     <ImageView
         android:id="@+id/postThumb"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="fill_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:scaleType="fitXY"
         android:src="@drawable/imglogo"
-        android:scaleType="centerCrop"
-        android:layout_marginRight="5dp"/>
+        />
 
     <TextView
         android:id="@+id/postTitleLabel"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/postThumb"
-        android:layout_toRightOf="@id/postThumb"
-        android:maxLines="2"
-        android:text="This is a good Post, I hope it will have 2 lines. Please give me 2 lines"
-        android:textIsSelectable="false"
-        android:textSize="16sp"
-        android:ellipsize="end"/>
+        android:text="Hello"
+        android:textSize="14dp"
+        android:textColor="#000000"
+        android:layout_below="@+id/postThumb"
+        android:textStyle="bold" />
+
 
     <TextView
         android:id="@+id/postDateLabel"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignBottom="@id/postThumb"
-        android:layout_toRightOf="@id/postThumb"
-        android:maxLines="1"
+        android:layout_alignParentLeft="true"
+        android:gravity="center"
         android:text="April 12, 2013"
-        android:textSize="12sp"
-        />
+        android:textSize="12dp"
+        android:textColor="#000000"
+        android:layout_below="@+id/postTitleLabel"
+        android:textStyle="italic" />
 </RelativeLayout>
