--- a/app/src/main/res/drawable/list_item_bg_normal.xml
+++ b/app/src/main/res/drawable/list_item_bg_normal.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#5c98e1"
-        android:endColor="#5c98e1"
+        android:startColor="#de08a0ff"
+        android:endColor="#de08a0ff"
         android:angle="90" />
 </shape>
