--- a/app/src/main/res/drawable/list_item_bg_pressed.xml
+++ b/app/src/main/res/drawable/list_item_bg_pressed.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#deffb108"
-        android:endColor="#deffb108"
+        android:startColor="@android:color/holo_red_dark"
+        android:endColor="@android:color/holo_red_dark"
         android:angle="90" />
 </shape>
