--- a/app/src/main/res/layout/layout_ntvspor_fragment.xml
+++ b/app/src/main/res/layout/layout_ntvspor_fragment.xml
@@ -13,5 +13,6 @@
     <ListView
         android:id="@+id/postListView"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        />
 </RelativeLayout>
