--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,8 +4,9 @@
     android:layout_height="fill_parent"
     xmlns:circleprogress="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#de08a0ff">
-
+    android:background="@drawable/action_bar_background"
+    >
+    <!--android:background="#0099FF"-->
   <!--  <ImageView
         android:id="@+id/imgLogo"
         android:layout_width="wrap_content"
