--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -25,7 +25,7 @@
         android:layout_above="@+id/progress"
         android:textColor="@android:color/white"
         android:textStyle="bold|italic"
-        android:textSize="30dp" />s
+        android:textSize="30dp" />
 
 
     <tech.ozak.bjkhaber.progressBar.CircleProgress
