--- a/app/src/main/res/layout/display_news.xml
+++ b/app/src/main/res/layout/display_news.xml
@@ -1,23 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent"
-android:orientation="vertical" >
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_gravity="center_vertical|center_horizontal"
+    android:gravity="center_vertical|center_horizontal" >
 
 
-<ProgressBar
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:layout_gravity="center"
-    android:id="@+id/progressBar1"/>
-
-    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
+    <WebView
         android:id="@+id/webViewFeed"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         >
 </WebView>
 
-
-
-</LinearLayout>
+</FrameLayout>
