Improved webview performance.Some bugs is fixed.

--- a/app/src/main/res/layout/activity_news_feed.xml
+++ b/app/src/main/res/layout/activity_news_feed.xml
@@ -13,16 +13,28 @@
 
 
     <!-- Listview to display slider menu -->
+    <!-- start-->
     <ListView
         android:id="@+id/navList"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
+        android:layout_gravity="left"
         android:choiceMode="singleChoice"
         android:divider="#00ff085e"
         android:dividerHeight="1dp"
         android:listSelector="@drawable/list_selector"
         android:background="@drawable/action_bar_background"/>
+
+    <!--<ListView
+        android:id="@+id/navList1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="right"
+        android:choiceMode="singleChoice"
+        android:divider="#00ff085e"
+        android:dividerHeight="1dp"
+        android:listSelector="@drawable/list_selector"
+        android:background="@drawable/action_bar_background"/>-->
 
 
 </android.support.v4.widget.DrawerLayout>
