--- a/app/src/main/res/layout/activity_show_content.xml
+++ b/app/src/main/res/layout/activity_show_content.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
@@ -21,3 +25,5 @@ android:orientation="vertical" android:weightSum="4">
     android:id="@+id/webViewFeed"
     android:layout_weight="3" />
 </LinearLayout>
+
+</ScrollView>
