--- a/app/src/main/res/layout/activity_show_content.xml
+++ b/app/src/main/res/layout/activity_show_content.xml
@@ -1,29 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent"
-android:orientation="vertical" android:weightSum="4">
-
-
-<ImageView
-    android:id="@+id/imagevw"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentRight="true"
-    android:scaleType="fitXY"
-    />
+    android:layout_height="fill_parent"
+    android:background="@drawable/action_bar_background"
+    android:orientation="vertical"
+    >
 
-<WebView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/webViewFeed"
-    android:layout_weight="3" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:weightSum="4">
+
+
+            <ImageView
+                android:id="@+id/imagevw"
+                android:layout_width="fill_parent"
+                android:layout_height="0dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_weight="1"
+                android:scaleType="fitXY" />
+
+            <WebView
+                android:id="@+id/webViewFeed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="3" />
+        </LinearLayout>
+
+    </ScrollView>
+
 </LinearLayout>
-
-</ScrollView>
