--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -5,13 +5,15 @@
 
 
     <com.antonionicolaspina.revealtextview.RevealTextView
-        android:layout_width="30dp"
-        android:layout_height="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:rtv_duration="4000"
         android:text="@string/app_name"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:id="@+id/reveal"/>
+        android:id="@+id/reveal"
+        android:textSize="25dp"
+        android:textColor="#de08a0ff"/>
 
 
    <!-- <ImageView
