--- a/app/src/main/res/layout/layout_aspor_fragment.xml
+++ b/app/src/main/res/layout/layout_aspor_fragment.xml
@@ -1,5 +1,10 @@
 <!-- The first child in the layout is for the main Activity UI-->
 <!-- activity_postlist.xml -->
+<!--<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >-->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,3 +21,5 @@
         android:layout_height="fill_parent"
         />
 </RelativeLayout>
+
+<!--</android.support.v4.widget.SwipeRefreshLayout>-->
