--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -28,7 +28,7 @@
         android:textSize="30dp" />
 
 
-    <tech.ozak.bjkhaber.progressBar.CircleProgress
+    <tech.ozak.sportmix.progressBar.CircleProgress
         android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
