--- a/app/src/main/res/layout/layout_ntvspor_fragment.xml
+++ b/app/src/main/res/layout/layout_ntvspor_fragment.xml
@@ -10,9 +10,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <ListView
-        android:id="@+id/postListView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        />
+    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe_refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ListView
+            android:id="@+id/postListView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
