--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -2,56 +2,41 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/real_action_bar">
+    android:background="@drawable/real_action_bar"
+    xmlns:htext="http://schemas.android.com/apk/res-auto">
 
 
-    <com.antonionicolaspina.revealtextview.RevealTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:rtv_duration="4000"
-        android:text="@string/app_name"
+    <com.hanks.htextview.HTextView
+        android:id="@+id/htextView1"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:clickable="true"
+        android:gravity="center"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:id="@+id/reveal"
-        android:textSize="30dp"
-        android:textColor="#de08a0ff"
-        android:textStyle="bold"/>/>
-
+        android:onClick="onClick"
+        htext:animateType="anvil"
+        android:text="@string/app_name"
+        android:background="@android:color/transparent"
+        android:textColor="@color/Color_DeepPink"
+        android:textSize="30sp"/>
 
    <!-- <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/splash"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/sportmix_logo" />-->
+        android:src="@drawable/splash" />-->
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
+<!--    <TextView
+        android:id="@+id/textsplash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/reveal"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal" >
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background ="@drawable/progress"/>
-
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="10dp"
-            android:text="@string/loading" />
-    </LinearLayout>
+        android:layout_margin="20dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        android:textColor="#EC407A" />-->
 
 </RelativeLayout>
