--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -18,7 +18,7 @@
         htext:animateType="anvil"
         android:text="@string/app_name"
         android:background="@android:color/transparent"
-        android:textColor="@color/Color_DeepPink"
+        android:textColor="@color/redPrimary"
         android:textSize="30sp"/>
 
    <!-- <ImageView
